<resources>
    <string name="locale">ru-RU</string>
    <string name="app_name">HolyWar</string>
    <string name="alert_win">Your opponent\'s ass burned down!</string>
    <string name="alert_lose">Your ass burned down!</string>
    <string name="alert_gotAss">You got +1 burning ass</string>
    <string name="word_nice">Nice!</string>
    <string name="word_topic">Topic</string>
    <string name="alert_searchingFor">Searching for your opponent</string>
    <string name="alert_wait">Please wait for the blah blah blah</string>
    <string name="word_cancel">Cancel</string>
    <string name="word_active">Active</string>
    <string name="word_history">History</string>
    <string name="sign_out">Sign Out</string>
    <string name="share">Share!</string>
    <string name="word_menu">Menu</string>
    <string name="word_stats">Stats</string>
    <string name="word_top">Top</string>
    <string name="word_rating">Rating</string>
    <string name="word_disputes">Disputes</string>
    <string name="word_wins">Wins</string>
    <string name="currency">Currency</string>
    <string name="word_achievements">Achievements</string>
    <string name="stat_achievements">Achievements:\ </string>
    <string name="latestTopics">Latest Topics</string>
    <string name="seeMore">See more</string>
    <string name="newPosts">New Posts</string>
    <string name="butthurt">got butthurt, quit now</string>
    <string name="comments_load">Load more comments</string>
    <string name="comments_add">Add a comment...</string>
    <string name="word_choose">choose</string>
    <string name="word_change">change</string>
    <string name="word_account">Account</string>
    <string name="word_username">Username</string>
    <string name="word_email" translatable="false">E-mail</string>
    <string name="changePass">Change password</string>
    <string name="word_settings">Settings</string>
    <string name="word_notif">Notifications</string>
    <string name="word_chats">Chats</string>
    <string name="word_language">Language</string>
    <string name="word_help">Help</string>
    <string name="word_apply">Apply</string>
    <string name="someText">blah blah blah</string>
    <string name="welcomeBack">Welcome back!</string>
    <string name="word_pass">Password</string>
    <string name="forgotPass">forgot password?</string>
    <string name="word_login">Log in</string>
    <string name="word_signUP">Sign Up</string>
    <string name="donHavAcc">Don\'t have an account?\ </string>
    <string name="welcome">Welcome!</string>
    <string name="confirmPass">Confirm password</string>
    <string name="createAcc">Create account</string>
    <string name="haveAcc">Already have an account?\ </string>
    <string name="signIn">Sign In</string>
    <string name="listOfTopics">List of topics</string>
    <string name="sort_hot">Hot</string>
    <string name="sort_date">Date</string>
    <string name="sort_rating">Rate</string>
    <string name="sort_create">Create</string>
    <string name="enterText">Enter the text here</string>
    <string name="word_why">Why?</string>
    <string name="reply">Reply</string>
    <string name="profile">Profile</string>
    <string name="posts">Posts</string>
    <string name="dialogs">Dialogs</string>
    <string name="home">Home</string>
    <string name="details">Post details</string>
    <string name="okay">Okay</string>
</resources>
