<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".settings.UsernameSettings"
        android:background="@drawable/gradient"
>

    <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:background="@color/absolute"
            app:elevation="0dp"
    >

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/absolute"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginRight="18dp"
                    android:orientation="horizontal"
            >

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:text="@string/word_cancel"
                        android:textColor="@color/white"
                        android:gravity="start|center"
                        android:id="@+id/cancel"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_medium"
                        android:textSize="15sp"
                />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:text="@string/word_username"
                        android:textColor="@color/white"
                        android:gravity="center"
                        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_semibold"
                        android:textSize="20sp"
                />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:text="@string/word_apply"
                        android:textColor="@color/white"
                        android:gravity="end|center"
                        android:id="@+id/apply"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_medium"
                        android:textSize="15sp"
                />
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/settings_username"/>

</android.support.design.widget.CoordinatorLayout>